--- a/styles.css
+++ b/styles.css
@@ -4,25 +4,27 @@ table {
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(59, 59, 59);
-    box-shadow: 5px 10px #888888;
+    box-shadow: 1em 1em 4em #888888;
+    position: relative;
+    margin-top: 4em;
 }
 input[type="button"]{
     width: 100%;
-    padding: 20px 20px;
+    padding: 3em 3em;
     background-color: rgb(124, 124, 124);
     color: black;
-    font-size: 15px;
+    font-size: 1em;
     font-weight: 400;
     border: none;
     border-radius: 1rem;
-    box-shadow: 7px 1px 50px -4px rgba(0, 0, 0, 0.77);
+    box-shadow: 7px 1px 45px -3px rgba(0, 0, 0, 0.77);
 }
 input[type="text"] {
-    width: 80%;
-    padding: 20px 20px;
+    width: 76%;
+    padding: 2em 2em;
     background-color: rgb(172, 172, 172);
     color: black;
-    font-size: 15px;
+    font-size: 1em;
     font-weight: 400;
     border-radius: 1rem;
     border-color: coral;
@@ -39,8 +41,40 @@ input[type="button"]:active{
     background-color: rgb(252, 70, 4);
 }
 body{
-    background-image: url(Assets/Pencil.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: ;
+    background: url(Assets/Pencil.jpg) no-repeat;
+    background-position: initial;
+    background-size:cover;
+    height: 100%;
+    background-attachment: fixed;
+}
+.container{
+    width: 40em;
+    height: 45.5em;
+    box-shadow: .1rem 0 1rem 0 rgba(0, 0, 0, .2);
+    border-radius: 5px;
+    background: inherit;
+    z-index: 1;
+    overflow: hidden;
+    margin:1em 32% ;
+    background-color: rgba(255, 255, 255, 0.0);
+    backdrop-filter: blur(10px);
+    border-radius: 2em;
+
+}
+.container:before{
+    content: "";
+    position: absolute;
+    background: inherit;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+    filter: blur(10px);
+    margin: -20px;
+}
+#Rosha{
+    position: relative;
+
 }
